[metadata]
name = Mines
version = attr: mines.__version__.__version__
url = https://github.com/dnek/mines-esolang
author = DNEK
author_email = dnek.app@gmail.com
license_file = LICENSE
description = An esoteric language inspired by Minesweeper.
long_description = file: README.md
keywords = mines interpreter esolang esoteric minesweeper
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Topic :: Software Development :: Interpreters
  Topic :: Games/Entertainment :: Puzzle Games

[options]
zip_safe = False
packages = find:
entry_points = file: entry_points.cfg
